@@ -22,10 +22,10 @@
  */
 package org.openjdk.bench.java.lang.foreign;
 
-import java.lang.foreign.Addressable;
+import java.lang.foreign.Arena;
 import java.lang.foreign.Linker;
 import java.lang.foreign.FunctionDescriptor;
-import java.lang.foreign.MemorySession;
+
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
 import org.openjdk.jmh.annotations.Fork;
@@ -57,9 +57,10 @@ public class VaList extends CLayouts {
 
     static {
         SymbolLookup loaderLibs = SymbolLookup.loaderLookup();
-        MH_ellipsis = linker.downcallHandle(loaderLibs.lookup("ellipsis").get(),
-                FunctionDescriptor.ofVoid(C_INT).asVariadic(C_INT, C_DOUBLE, C_LONG_LONG));
-        MH_vaList = linker.downcallHandle(loaderLibs.lookup("vaList").get(),
+        MH_ellipsis = linker.downcallHandle(loaderLibs.find("ellipsis").get(),
+                FunctionDescriptor.ofVoid(C_INT, C_INT, C_DOUBLE, C_LONG_LONG),
+                Linker.Option.firstVariadicArg(1));
+        MH_vaList = linker.downcallHandle(loaderLibs.find("vaList").get(),
                 FunctionDescriptor.ofVoid(C_INT, C_POINTER));
     }
 
@@ -71,13 +72,13 @@ public class VaList extends CLayouts {
 
     @Benchmark
     public void vaList() throws Throwable {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (Arena arena = Arena.openConfined()) {
             java.lang.foreign.VaList vaList = java.lang.foreign.VaList.make(b ->
                     b.addVarg(C_INT, 1)
                             .addVarg(C_DOUBLE, 2D)
-                            .addVarg(C_LONG_LONG, 3L), session);
+                            .addVarg(C_LONG_LONG, 3L), arena.scope());
             MH_vaList.invokeExact(3,
-                    (Addressable)vaList);
+                    vaList.segment());
         }
     }
 }
